force-app/main/default/objects/Exam_Instance__c/Exam_Instance__c.object-meta.xml
<CustomObject>
    <description>This holds details of one exam taken by a student</description>
    <label>My Exam</label>
    <nameField>
        <label>Exam Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Exams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>