force-app/main/default/objects/Exam_Instance__c/fields/Adaptive_Exam__c.field-meta.xml
<CustomField>
    <fullName>Adaptive_Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adaptive Exam</label>
    <referenceTo>Adaptive_Exam__c</referenceTo>
    <relationshipLabel>My Exams</relationshipLabel>
    <relationshipName>My_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>