force-app/main/default/objects/Exam_Instance__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>My Exams</relationshipLabel>
    <relationshipName>Exam_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>