force-app/main/default/objects/Exam_Instance__c/fields/fAverage_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>fAverage_Difficulty__c</fullName>
    <formula>fSumOfDifficulty__c /  fTtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Difficulty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>