force-app/main/default/objects/Exam_Instance__c/fields/fCorrect__c.field-meta.xml
<CustomField>
    <fullName>fCorrect__c</fullName>
    <label>Correct</label>
    <summarizedField>Exam_Results_Detail__c.fCorrect__c</summarizedField>
    <summaryForeignKey>Exam_Results_Detail__c.My_Exam__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>