force-app/main/default/objects/Exam_Instance__c/fields/fIncorrect__c.field-meta.xml
<CustomField>
    <fullName>fIncorrect__c</fullName>
    <label>Incorrect</label>
    <summarizedField>Exam_Results_Detail__c.fIncorrect__c</summarizedField>
    <summaryForeignKey>Exam_Results_Detail__c.My_Exam__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>