force-app/main/default/objects/Exam_Instance__c/fields/fNetScore__c.field-meta.xml
<CustomField>
    <fullName>fNetScore__c</fullName>
    <formula>if ( (fCorrect__c &lt; (( fIncorrect__c -  fOmit__c )/4)), 0, (fCorrect__c - (( fIncorrect__c -  fOmit__c )/4)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>