force-app/main/default/objects/Exam_Instance__c/fields/fNetScore_Pct__c.field-meta.xml
<CustomField>
    <fullName>fNetScore_Pct__c</fullName>
    <formula>fNetScore__c /  fTtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Score Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>