force-app/main/default/objects/Exam_Instance__c/fields/fOmit__c.field-meta.xml
<CustomField>
    <fullName>fOmit__c</fullName>
    <label>Omit</label>
    <summarizedField>Exam_Results_Detail__c.fOmit__c</summarizedField>
    <summaryForeignKey>Exam_Results_Detail__c.My_Exam__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>