force-app/main/default/objects/Exam_Instance__c/fields/fSumOfDifficulty__c.field-meta.xml
<CustomField>
    <fullName>fSumOfDifficulty__c</fullName>
    <label>fSumOfDifficulty</label>
    <summarizedField>Exam_Results_Detail__c.Difficulty__c</summarizedField>
    <summaryForeignKey>Exam_Results_Detail__c.My_Exam__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>