force-app/main/default/objects/Exam_Instance__c/fields/fTtotal__c.field-meta.xml
<CustomField>
    <fullName>fTtotal__c</fullName>
    <label>Total</label>
    <summaryForeignKey>Exam_Results_Detail__c.My_Exam__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>