force-app/main/default/objects/Exam_Instance__c/fields/IsLive__c.field-meta.xml
<CustomField>
    <fullName>IsLive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsLive</label>
    <type>Checkbox</type>
</CustomField>