force-app/main/default/objects/Exam_Instance__c/fields/Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time Taken</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>