force-app/main/default/objects/Exam_Instance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Descriptive_Name__c</columns>
    <columns>Duration__c</columns>
    <columns>Test_Taker__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Time_Taken__c</columns>
    <columns>Exam__c</columns>
    <columns>fNetScore_Pct__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>